migrate to ItemStackHandler, mostly.