@@ -3,18 +3,14 @@ package de.dafuqs.spectrum.helpers;
 import de.dafuqs.spectrum.api.interaction.ItemProvider;
 import de.dafuqs.spectrum.api.interaction.ItemProviderRegistry;
 import de.dafuqs.spectrum.api.recipe.IngredientStack;
-import net.fabricmc.fabric.api.transfer.v1.item.InventoryStorage;
+import net.minecraft.world.*;
+import net.minecraft.world.entity.player.*;
 import net.minecraft.world.item.ItemStack;
-import net.fabricmc.fabric.api.transfer.v1.storage.StorageUtil;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.util.Tuple;
-import net.minecraft.world.Container;
-import net.minecraft.world.WorldlyContainer;
-import net.minecraft.world.WorldlyContainerHolder;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntitySelector;
-import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
@@ -25,6 +21,7 @@ import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.entity.ChestBlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
+import net.neoforged.neoforge.items.*;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -32,12 +29,13 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
+// Is this wise?
 public class InventoryHelper {
 
-	public static int getItemCountInInventory(Container inventory, Item item) {
+	public static int getItemCountInInventory(IItemHandlerModifiable inventory, Item item) {
 		int count = 0;
-		for (int i = 0; i < inventory.getContainerSize(); i++) {
-			ItemStack stack = inventory.getItem(i);
+		for (int i = 0; i < inventory.getSlots(); i++) {
+			ItemStack stack = inventory.getStackInSlot(i);
 			if (stack.is(item)) {
 				count += stack.getCount();
 			}
@@ -51,7 +49,7 @@ public class InventoryHelper {
 		}
 		
 		// count how many we have in the inv
-		Container playerInventory = playerEntity.getInventory();
+		Inventory playerInventory = playerEntity.getInventory();
 		List<ItemStack> matchingStacks = new ArrayList<>();
 		int paymentStackItemCount = 0;
 		for (int i = 0; i < playerInventory.getContainerSize(); i++) {
@@ -96,11 +94,12 @@ public class InventoryHelper {
 		return true;
 	}
 	
-	public static boolean isItemCountInInventory(List<ItemStack> inventory, ItemStack ItemStack, int maxSearchAmount) {
+	public static boolean isItemCountInInventory(IItemHandlerModifiable inventory, ItemStack reference, int maxSearchAmount) {
 		int count = 0;
-		for (ItemStack inventoryStack : inventory) {
-			if (ItemStack.matches(inventoryStack)) {
-				count += inventoryStack.getCount();
+		for (int i = 0; i < inventory.getSlots(); i++) {
+			var stack = inventory.getStackInSlot(i);
+			if (ItemStack.isSameItemSameComponents(reference, stack)) {
+				count += stack.getCount();
 				if (count >= maxSearchAmount) {
 					return true;
 				}
@@ -109,13 +108,14 @@ public class InventoryHelper {
 		return false;
 	}
 	
-	public static Tuple<Integer, List<ItemStack>> getStackCountInInventory(ItemStack itemStack, List<ItemStack> inventory, int maxSearchAmount) {
+	public static Tuple<Integer, List<ItemStack>> getStackCountInInventory(ItemStack reference, IItemHandlerModifiable inventory, int maxSearchAmount) {
 		List<ItemStack> foundStacks = new ArrayList<>();
 		int count = 0;
-		for (ItemStack inventoryStack : inventory) {
-			if (ItemStack.isSameItemSameComponents(inventoryStack, itemStack)) {
-				foundStacks.add(inventoryStack);
-				count += inventoryStack.getCount();
+		for (int i = 0; i < inventory.getSlots(); i++) {
+			var stack = inventory.getStackInSlot(i);
+			if (ItemStack.isSameItemSameComponents(stack, reference)) {
+				foundStacks.add(stack);
+				count += stack.getCount();
 				if (count >= maxSearchAmount) {
 					return new Tuple<>(count, foundStacks);
 				}
@@ -132,7 +132,7 @@ public class InventoryHelper {
 	 * @param inventory the inventory to add to
 	 * @return The remaining stack that could not be added
 	 */
-	public static ItemStack smartAddToInventory(ItemStack itemStack, Container inventory, @Nullable Direction side) {
+	public static ItemStack smartAddToInventory(ItemStack itemStack, IItemHandlerModifiable inventory, @Nullable Direction side) {
 		if (inventory instanceof WorldlyContainer sidedInventory && side != null) {
 			int[] acceptableSlots = sidedInventory.getSlotsForFace(side);
 			for (int acceptableSlot : acceptableSlots) {
@@ -144,7 +144,7 @@ public class InventoryHelper {
 				}
 			}
 		} else {
-			for (int i = 0; i < inventory.getContainerSize(); i++) {
+			for (int i = 0; i < inventory.getSlots(); i++) {
 				itemStack = setOrCombineStack(inventory, i, itemStack);
 				if (itemStack.isEmpty()) {
 					break;
@@ -154,18 +154,18 @@ public class InventoryHelper {
 		return itemStack;
 	}
 
-	public static ItemStack setOrCombineStack(Container inventory, int slot, ItemStack addingStack) {
-		ItemStack existingStack = inventory.getItem(slot);
+	public static ItemStack setOrCombineStack(IItemHandlerModifiable inventory, int slot, ItemStack addingStack) {
+		ItemStack existingStack = inventory.getStackInSlot(slot);
 		if (existingStack.isEmpty()) {
 			if (addingStack.getCount() > addingStack.getMaxStackSize()) {
 				int amount = addingStack.getMaxStackSize();
-				amount = Math.min(amount, inventory.getMaxStackSize());
+				amount = Math.min(amount, inventory.getSlotLimit(slot));
 				ItemStack newStack = addingStack.copy();
 				newStack.setCount(amount);
 				addingStack.shrink(amount);
-				inventory.setItem(slot, newStack);
+				inventory.setStackInSlot(slot, newStack);
 			} else {
-				inventory.setItem(slot, addingStack);
+				inventory.setStackInSlot(slot, addingStack);
 				return ItemStack.EMPTY;
 			}
 		} else {
@@ -194,11 +194,12 @@ public class InventoryHelper {
 	 * @param rangeEnd   the last insert slot
 	 * @return false if the stack could not be completely added
 	 */
-	public static boolean addToInventory(Container inventory, ItemStack stackToAdd, int rangeStart, int rangeEnd) {
+
+	public static boolean addToInventory(IItemHandlerModifiable inventory, ItemStack stackToAdd, int rangeStart, int rangeEnd) {
 		for (int i = rangeStart; i < rangeEnd; i++) {
-			ItemStack currentStack = inventory.getItem(i);
+			ItemStack currentStack = inventory.getStackInSlot(i);
 			if (currentStack.isEmpty()) {
-				inventory.setItem(i, stackToAdd);
+				inventory.setStackInSlot(i, stackToAdd);
 				return true;
 			} else if (stackToAdd.isStackable()) {
 				combineStacks(currentStack, stackToAdd);
@@ -210,21 +211,13 @@ public class InventoryHelper {
 		return false;
 	}
 	
-	/**
-	 * Adds a list of stacks to an inventory in a given slot range
-	 *
-	 * @param inventory   the inventory to add to
-	 * @param stacksToAdd the stacks to add to the inventory
-	 * @param rangeStart  the start insert slot
-	 * @param rangeEnd    the last insert slot
-	 * @return false if not add stacksToAdd could be added
-	 */
-	public static boolean addToInventory(Container inventory, List<ItemStack> stacksToAdd, int rangeStart, int rangeEnd) {
+
+	public static boolean addToInventory(IItemHandlerModifiable inventory, List<ItemStack> stacksToAdd, int rangeStart, int rangeEnd) {
 		for (int i = rangeStart; i < rangeEnd; i++) {
-			ItemStack inventoryStack = inventory.getItem(i);
+			ItemStack inventoryStack = inventory.getStackInSlot(i);
 			if (inventoryStack.isEmpty()) {
-				inventory.setItem(i, stacksToAdd.get(0));
-				stacksToAdd.remove(0);
+				inventory.setStackInSlot(i, stacksToAdd.get(0));
+				stacksToAdd.removeFirst();
 				if (stacksToAdd.isEmpty()) {
 					return true;
 				}
@@ -246,11 +239,11 @@ public class InventoryHelper {
 		return false;
 	}
 	
-	public static ItemStack addToInventory(List<ItemStack> inventory, ItemStack itemStack, int rangeStart, int rangeEnd) {
+	public static ItemStack offerToInventory(IItemHandlerModifiable inventory, ItemStack itemStack, int rangeStart, int rangeEnd) {
 		for (int i = rangeStart; i < rangeEnd; i++) {
-			ItemStack currentStack = inventory.get(i);
+			ItemStack currentStack = inventory.getStackInSlot(i);
 			if (currentStack.isEmpty()) {
-				inventory.set(i, itemStack);
+				inventory.setStackInSlot(i, itemStack);
 				return ItemStack.EMPTY;
 			} else if (itemStack.isStackable()) {
 				combineStacks(currentStack, itemStack);
@@ -264,7 +257,7 @@ public class InventoryHelper {
 	}
 	
 	// TODO: lots of code overlap with hasInInventory()
-	public static boolean hasIngredientStacksInInventory(List<IngredientStack> ingredients, Container inventory) {
+	public static boolean hasIngredientStacksInInventory(List<IngredientStack> ingredients, IItemHandlerModifiable inventory) {
 		List<Ingredient> ingredientsToFind = new ArrayList<>();
 		List<Integer> requiredIngredientAmounts = new ArrayList<>();
 		for (IngredientStack ingredient : ingredients) {
@@ -276,11 +269,11 @@ public class InventoryHelper {
 			requiredIngredientAmounts.add(ingredient.getCount());
 		}
 		
-		for (int i = 0; i < inventory.getContainerSize(); i++) {
+		for (int i = 0; i < inventory.getSlots(); i++) {
 			if (ingredientsToFind.isEmpty()) {
 				break;
 			}
-			ItemStack currentStack = inventory.getItem(i);
+			ItemStack currentStack = inventory.getStackInSlot(i);
 			if (!currentStack.isEmpty()) {
 				int amount = currentStack.getCount();
 				for (int j = 0; j < ingredientsToFind.size(); j++) {
@@ -306,7 +299,7 @@ public class InventoryHelper {
 		return ingredientsToFind.isEmpty();
 	}
 	
-	public static boolean hasInInventory(List<Ingredient> ingredients, Container inventory) {
+	public static boolean hasInInventory(List<Ingredient> ingredients, IItemHandlerModifiable inventory) {
 		List<Ingredient> ingredientsToFind = new ArrayList<>();
 		List<Integer> requiredIngredientAmounts = new ArrayList<>();
 		for (Ingredient ingredient : ingredients) {
@@ -322,11 +315,11 @@ public class InventoryHelper {
 			}
 		}
 		
-		for (int i = 0; i < inventory.getContainerSize(); i++) {
+		for (int i = 0; i < inventory.getSlots(); i++) {
 			if (ingredientsToFind.isEmpty()) {
 				break;
 			}
-			ItemStack currentStack = inventory.getItem(i);
+			ItemStack currentStack = inventory.getStackInSlot(i);
 			if (!currentStack.isEmpty()) {
 				int amount = currentStack.getCount();
 				for (int j = 0; j < ingredientsToFind.size(); j++) {
@@ -353,7 +346,7 @@ public class InventoryHelper {
 	}
 	
 	// return are the recipe remainders
-	public static List<ItemStack> removeFromInventoryWithRemainders(List<Ingredient> ingredients, Container inventory) {
+	public static List<ItemStack> removeFromInventoryWithRemainders(List<Ingredient> ingredients, IItemHandlerModifiable inventory) {
 		List<ItemStack> remainders = new ArrayList<>();
 		
 		List<Ingredient> requiredIngredients = new ArrayList<>();
@@ -371,18 +364,18 @@ public class InventoryHelper {
 			}
 		}
 		
-		for (int i = 0; i < inventory.getContainerSize(); i++) {
+		for (int i = 0; i < inventory.getSlots(); i++) {
 			if (requiredIngredients.isEmpty()) {
 				break;
 			}
 			
-			ItemStack currentStack = inventory.getItem(i);
+			ItemStack currentStack = inventory.getStackInSlot(i);
 			if (!currentStack.isEmpty()) {
 				for (int j = 0; j < requiredIngredients.size(); j++) {
 					int currentStackCount = currentStack.getCount();
 					if (requiredIngredients.get(j).test(currentStack)) {
 						int ingredientCount = requiredIngredientAmounts.get(j);
-						ItemStack remainder = currentStack.getRecipeRemainder();
+						ItemStack remainder = currentStack.getCraftingRemainingItem();
 						if (currentStackCount >= ingredientCount) {
 							if (!remainder.isEmpty()) {
 								remainder.setCount(requiredIngredientAmounts.get(j));
@@ -411,7 +404,7 @@ public class InventoryHelper {
 	
 	// return are the recipe remainders
 	// TODO lots of code overlap with removeFromInventoryWithRemainders()
-	public static List<ItemStack> removeIngredientStacksFromInventoryWithRemainders(List<IngredientStack> ingredients, Container inventory) {
+	public static List<ItemStack> removeIngredientStacksFromInventoryWithRemainders(List<IngredientStack> ingredients, IItemHandlerModifiable inventory) {
 		List<ItemStack> remainders = new ArrayList<>();
 		
 		List<Ingredient> requiredIngredients = new ArrayList<>();
@@ -425,18 +418,18 @@ public class InventoryHelper {
 			requiredIngredientAmounts.add(ingredient.getCount());
 		}
 		
-		for (int i = 0; i < inventory.getContainerSize(); i++) {
+		for (int i = 0; i < inventory.getSlots(); i++) {
 			if (requiredIngredients.isEmpty()) {
 				break;
 			}
 			
-			ItemStack currentStack = inventory.getItem(i);
+			ItemStack currentStack = inventory.getStackInSlot(i);
 			if (!currentStack.isEmpty()) {
 				for (int j = 0; j < requiredIngredients.size(); j++) {
 					int currentStackCount = currentStack.getCount();
 					if (requiredIngredients.get(j).test(currentStack)) {
 						int ingredientCount = requiredIngredientAmounts.get(j);
-						ItemStack remainder = currentStack.getRecipeRemainder();
+						ItemStack remainder = currentStack.getCraftingRemainingItem();
 						if (currentStackCount >= ingredientCount) {
 							if (!remainder.isEmpty()) {
 								remainder.setCount(requiredIngredientAmounts.get(j));
@@ -463,25 +456,22 @@ public class InventoryHelper {
 		return remainders;
 	}
 
-	@SuppressWarnings("UnstableApiUsage")
-    public static boolean canFitStacks(List<ItemStack> stacks, Container inventory) {
-		var storage = InventoryStorage.of(inventory, null);
-
-		if (!storage.supportsInsertion())
-			return false;
+    public static boolean canFitStacks(IItemHandlerModifiable inventory, List<ItemStack> stacks) {
+		if (stacks.isEmpty())
+			return true;
 
 		for (ItemStack stack : stacks) {
 			if (stack.isEmpty())
 				continue;
 
-			if (StorageUtil.simulateInsert(storage, ItemStack.of(stack), stack.getMaxStackSize(), null) != stack.getCount())
+			if (!ItemHandlerHelper.insertItemStacked(inventory, stack, true).isEmpty())
 				return false;
 		}
 
 		return true;
 	}
 
-	public static List<ItemStack> getRemainders(List<Ingredient> ingredients, Container inventory) {
+	public static List<ItemStack> getRemainders(List<Ingredient> ingredients) {
 		List<ItemStack> remainders = new ArrayList<>();
 
 		for (Ingredient ingredient : ingredients) {
@@ -490,7 +480,7 @@ public class InventoryHelper {
 			}
 
 			if (ingredient.getItems().length > 0) {
-				remainders.add(ingredient.getItems()[0].getRecipeRemainder());
+				remainders.add(ingredient.getItems()[0].getCraftingRemainingItem());
 			}
 		}
 
@@ -498,14 +488,14 @@ public class InventoryHelper {
 	}
 	
 	// returns recipe remainders
-	public static List<ItemStack> removeFromInventoryWithRemainders(ItemStack removeItemStack, Container inventory) {
+	public static List<ItemStack> removeFromInventoryWithRemainders(ItemStack removeItemStack, IItemHandlerModifiable inventory) {
 		List<ItemStack> remainders = new ArrayList<>();
 		
 		int removeItemStackCount = removeItemStack.getCount();
-		for (int i = 0; i < inventory.getContainerSize(); i++) {
-			ItemStack currentStack = inventory.getItem(i);
+		for (int i = 0; i < inventory.getSlots(); i++) {
+			ItemStack currentStack = inventory.getStackInSlot(i);
 			if (ItemStack.isSameItemSameComponents(currentStack, removeItemStack)) {
-				ItemStack remainder = currentStack.getRecipeRemainder();
+				ItemStack remainder = currentStack.getCraftingRemainingItem();
 				
 				int amountAbleToDecrement = Math.min(currentStack.getCount(), removeItemStackCount);
 				currentStack.shrink(amountAbleToDecrement);
@@ -523,7 +513,7 @@ public class InventoryHelper {
 		return remainders;
 	}
 	
-	public static boolean canExtract(Container inv, ItemStack stack, int slot, Direction facing) {
+	public static boolean canExtract(IItemHandlerModifiable inv, ItemStack stack, int slot, Direction facing) {
 		return !(inv instanceof WorldlyContainer) || ((WorldlyContainer) inv).canTakeItemThroughFace(slot, stack, facing);
 	}
 	
@@ -532,53 +522,25 @@ public class InventoryHelper {
 				&& (currentItemStack.getCount() + additionalItemStack.getCount() <= currentItemStack.getMaxStackSize()));
 	}
 	
-	@Nullable
-	public static Container getInventoryAt(Level world, double x, double y, double z) {
-		Container inventory = null;
-		BlockPos blockPos = BlockPos.containing(x, y, z);
-		BlockState blockState = world.getBlockState(blockPos);
-		Block block = blockState.getBlock();
-		if (block instanceof WorldlyContainerHolder) {
-			inventory = ((WorldlyContainerHolder) block).getContainer(blockState, world, blockPos);
-		} else if (blockState.hasBlockEntity()) {
-			BlockEntity blockEntity = world.getBlockEntity(blockPos);
-			if (blockEntity instanceof Container) {
-				inventory = (Container) blockEntity;
-				if (inventory instanceof ChestBlockEntity && block instanceof ChestBlock) {
-					inventory = ChestBlock.getContainer((ChestBlock) block, blockState, world, blockPos, true);
-				}
-			}
-		}
-		
-		if (inventory == null) {
-			List<Entity> list = world.getEntities((Entity) null, new AABB(x - 0.5D, y - 0.5D, z - 0.5D, x + 0.5D, y + 0.5D, z + 0.5D), EntitySelector.CONTAINER_ENTITY_SELECTOR);
-			if (!list.isEmpty()) {
-				inventory = (Container) list.get(world.random.nextInt(list.size()));
-			}
-		}
-		
-		return inventory;
-	}
-	
-	public static Optional<ItemStack> extractLastStack(Container inventory) {
+	public static Optional<ItemStack> extractLastStack(IItemHandlerModifiable inventory) {
 		ItemStack currentStack;
-		for (int i = inventory.getContainerSize() - 1; i >= 0; i--) {
-			currentStack = inventory.getItem(i);
+		for (int i = inventory.getSlots() - 1; i >= 0; i--) {
+			currentStack = inventory.getStackInSlot(i);
 			if (!currentStack.isEmpty()) {
-				inventory.setItem(i, ItemStack.EMPTY);
+				inventory.setStackInSlot(i, ItemStack.EMPTY);
 				return Optional.of(currentStack);
 			}
 		}
 		return Optional.empty();
 	}
 	
-	public static ItemStack addToInventoryUpToSingleStackWithMaxTotalCount(ItemStack itemStack, Container inventory, int maxTotalCount) {
+	public static ItemStack addToInventoryUpToSingleStackWithMaxTotalCount(ItemStack itemStack, IItemHandlerModifiable inventory, int maxTotalCount) {
 		// check if a stack that can be combined is in the inventory already
 		int itemCount = 0;
 		int firstEmptySlot = -1;
 		ItemStack matchingStack = null;
-		for (int i = 0; i < inventory.getContainerSize(); i++) {
-			ItemStack slotStack = inventory.getItem(i);
+		for (int i = 0; i < inventory.getSlots(); i++) {
+			ItemStack slotStack = inventory.getStackInSlot(i);
 			
 			if (slotStack.isEmpty()) {
 				if (firstEmptySlot == -1) {
@@ -611,23 +573,14 @@ public class InventoryHelper {
 			return itemStack;
 		}
 		
-		inventory.setItem(firstEmptySlot, itemStack.split(storageLeft));
+		inventory.setStackInSlot(firstEmptySlot, itemStack.split(storageLeft));
 		return itemStack;
 	}
 	
-	public static int countItemsInInventory(Container inventory) {
+	public static int countItemsInInventory(IItemHandlerModifiable inventory) {
 		int contentCount = 0;
-		for (int i = 0; i < inventory.getContainerSize(); i++) {
-			ItemStack stack = inventory.getItem(i);
-			contentCount += stack.getCount();
-		}
-		return contentCount;
-	}
-	
-	public static int countItemsInInventory(List<ItemStack> inventory) {
-		int contentCount = 0;
-		for (ItemStack stack : inventory) {
-			contentCount += stack.getCount();
+		for (int i = 0; i < inventory.getSlots(); i++) {
+			contentCount += inventory.getStackInSlot(i).getCount();
 		}
 		return contentCount;
 	}
